@@ -33,7 +33,7 @@ foreach (new EfrontNodeFilterIterator(new RecursiveIteratorIterator(new Recursiv
     $legalValues[] = $key;
 }
 
-if (isset($_GET['add']) || (isset($_GET['edit']) && in_array($_GET['edit'], $legalValues)) && $_change_) {
+if (isset($_GET['add']) || (isset($_GET['edit']) && in_array($_GET['edit'], $legalValues) && eF_checkParameter($_GET['edit'], 'id')) && $_change_) {
  try {
      if ($_GET['edit']) {
          $currentUnit = $currentContent -> seekNode($_GET['edit']);
@@ -604,6 +604,10 @@ if (isset($_GET['add']) || (isset($_GET['edit']) && in_array($_GET['edit'], $leg
             $smarty -> assign("T_UNIT", array());
         }
         if ($_student_ && $_change_ && $currentLesson -> options['tracking']) {
+         if ( $userProgress['lesson_passed'] && $userProgress['completed']) {
+          $nextLesson = $currentUser -> getNextLesson($currentLesson, $_SESSION['s_courses_ID']);
+          $smarty -> assign("T_NEXTLESSON", $nextLesson);
+         }
             if ($currentUnit['options']['complete_unit_setting'] == EfrontUnit::COMPLETION_OPTIONS_COMPLETEWITHQUESTION && $currentUnit['options']['complete_question'] && (!in_array($currentUnit['id'], array_keys($seenContent)) || sizeof($_POST) > 0) ) {
                 $lessonQuestions = $currentLesson -> getQuestions();
                 if (in_array($currentUnit['options']['complete_question'], array_keys($lessonQuestions))) {
